(chore) Various content updates
Update pages based on feedback from our content designer.

I've also changes a few tests that relied on the old copy
being present.

--- a/app/views/describe_repair/_communal_intercom.html.haml
+++ b/app/views/describe_repair/_communal_intercom.html.haml
@@ -1,13 +1,13 @@
 %h1
-  Please let us know any additional details you think might help us
+  Let us know any additional details you think might help us
 
 %p
   Please describe:
 
 %ul
   %li
-    the type of problem with the intercom
+    the problem with the intercom
   %li
-    whether there is any obvious damage to the intercom unit
-    (either in your home or door entry)
+    whether there's any obvious damage to the intercom
+    (either in your home or at the door entry)
 
