--- a/app/views/describe_repair/_communal_main_entrance_door.html.haml
+++ b/app/views/describe_repair/_communal_main_entrance_door.html.haml
@@ -1,14 +1,14 @@
 %h1
-  Please let us know any additional details you think might help us
+  Let us know any additional details you think might help us
 
 %p
   Please describe:
 
 %ul
   %li
-    the type of problem with the door
+    the problem with the door
   %li
-    whether there is any obvious damage to the door
+    whether there's any obvious damage to the door
   %li
-    the location of the door (if there are multiple access doors)
+    where the door is (if there's more than one)
 
