--- a/app/views/describe_repair/_communal_pests.html.haml
+++ b/app/views/describe_repair/_communal_pests.html.haml
@@ -1,10 +1,9 @@
 %h1
-  Please let us know any additional details you think might help us
+  Let us know any additional details you think might help us
 
 %p
   Please describe:
 
 %ul
   %li
-    where you have spotted pests or rodents within the communal grounds
-
+    where you've seen pests or rodents within the communal grounds
