--- a/app/views/describe_repair/_communal_rubbish_chute.html.haml
+++ b/app/views/describe_repair/_communal_rubbish_chute.html.haml
@@ -1,13 +1,14 @@
 %h1
-  Please let us know any additional details you think might help us
+  Let us know any additional details you think might help us
 
 %p
   Please describe:
 
 %ul
   %li
-    the type of problem with the rubbish chute
+    the problem with the rubbish chute
   %li
-    whether there is any obvious damage to the chute
+    whether there's any obvious damage to the rubbish chute
   %li
-    the location of the rubbish chute
+    where the rubbish chute is
+    (the nearest property or the floor number)
