--- a/app/views/describe_repair/_describe_problem.html.haml
+++ b/app/views/describe_repair/_describe_problem.html.haml
@@ -1,8 +1,11 @@
-%h1 Please describe what needs to be fixed
+%h1
+  Let us know any additional details you think might help us
 
 %p
-  For example:
+  Please describe:
 
 %ul
-  %li which rooms are affected?
-  %li how does it impact your household?
+  %li
+    the problem
+  %li
+    whether there's any obvious damage to the item
