--- a/app/views/describe_repair/_inside_bathroom_toilet_damaged.html.haml
+++ b/app/views/describe_repair/_inside_bathroom_toilet_damaged.html.haml
@@ -1,5 +1,5 @@
 %h1
-  Please let us know any additional details you think might help us
+  Let us know any additional details you think might help us
 
 %p
   Please describe:
@@ -7,4 +7,3 @@
 %ul
   %li
     how the toilet is damaged
-
