--- a/app/views/describe_repair/_inside_boiler.html.haml
+++ b/app/views/describe_repair/_inside_boiler.html.haml
@@ -1,12 +1,11 @@
 %h1
-  Please let us know any additional details you think might help us
+  Let us know any additional details you think might help us
 
 %p
   Please describe:
 
 %ul
   %li
-    whether there is an error message on your boiler
+    whether there's an error message on your boiler
   %li
-    if the problem has happened previously
-
+    if the problem has happened before
