--- a/app/views/describe_repair/_inside_light_fitting.html.haml
+++ b/app/views/describe_repair/_inside_light_fitting.html.haml
@@ -1,13 +1,11 @@
 %h1
-  Please let us know any additional details you think might help us
+  Let us know any additional details you think might help us
 
 %p
   Please describe:
 
 %ul
   %li
-    the type of problem with the light fitting
+    the problem with the light fitting
   %li
-    whether there is any obvious damage
-
-
+    whether there's any obvious damage
