--- a/app/views/describe_repair/_other_external_door_stiff.html.haml
+++ b/app/views/describe_repair/_other_external_door_stiff.html.haml
@@ -1,5 +1,5 @@
 %h1
-  Please let us know any additional details you think might help us
+  Let us know any additional details you think might help us
 
 %p
   Please describe:
@@ -8,4 +8,4 @@
   %li
     how the movement of the door is affected
   %li
-    whether there is any obvious damage to the door
+    whether there's any obvious damage to the door
