--- a/app/views/describe_repair/_other_internal_door.html.haml
+++ b/app/views/describe_repair/_other_internal_door.html.haml
@@ -1,15 +1,13 @@
 %h1
-  Please let us know any additional details you think might help us
+  Let us know any additional details you think might help us
 
 %p
   Please describe:
 
 %ul
   %li
-    the type of problem with the door
+    the problem with the door
   %li
-    where the door is located
+    where the door is
   %li
-    whether there is any obvious damage to the door
-
-
+    whether there's any obvious damage to the door
