--- a/app/views/describe_repair/_outside_drain.html.haml
+++ b/app/views/describe_repair/_outside_drain.html.haml
@@ -1,16 +1,14 @@
 %h1
-  Please let us know any additional details you think might help us
+  Let us know any additional details you think might help us
 
 %p
   Please describe:
 
 %ul
   %li
-    the type of problem with the drain or gully
+    the problem with the drain or gully
   %li
-    whether there is any obvious damage
+    whether there's any obvious damage
   %li
-    the location of the problem, such as the nearest property or which floor it's on
-
-
-
+    the location of the problem
+    (the nearest property or floor number)
