--- a/app/views/pages/_emergency_telephone_numbers.html.haml
+++ b/app/views/pages/_emergency_telephone_numbers.html.haml
@@ -6,13 +6,18 @@
     Monday to Friday, 8am to 7pm and Saturday, 9am to 1pm
 
 %p
-  Outside of these hours, we provide a
+  Outside these hours, we provide a
   %em
     make safe
-  service, to ensure that there is no danger to your household or significant
-  damage to your property, please call:
+  service, to ensure there's no danger to your
+  household or significant damage to your property.
+  Please call
   %strong
     = repairs_emergency_telephone_number
+
+%p
+  If your emergency relates to gas, electricity or water
+  supply, you should phone:
 
 %p
   %strong
