--- a/app/views/pages/address_isnt_here.html.haml
+++ b/app/views/pages/address_isnt_here.html.haml
@@ -1,15 +1,13 @@
 = back_link
 
 %h1
-  We cannot find your address
+  We can't find your address.
 
-%p.lede
+%p
   This might be because your home is not managed by Hackney Council.
 
 %p
-  If you are one of our tenants, please call our repair centre on
+  If you're one of our tenants, please call the repairs contact
+  centre on
   = repairs_contact_centre_telephone_number
   so we can help you with your problem.
-
-%p
-  We are open Monday to Friday 8am to 7pm and Saturdays 9am to 1pm.
