--- a/app/views/pages/carbon_monoxide_alarm.html.haml
+++ b/app/views/pages/carbon_monoxide_alarm.html.haml
@@ -16,7 +16,7 @@
   %li
     Do not operate electrical light switches and power sockets
   %li
-    Do not use the door entry system, if you are granting anyone access, go down to the entrance door to let them in
+    Do not use the door entry system - if you need to let someone in, go down to the entrance door to open it
   %li
     Open doors and windows to ventilate the area
   %li
