--- a/app/views/pages/emergency_contact.html.haml
+++ b/app/views/pages/emergency_contact.html.haml
@@ -4,10 +4,10 @@
   Emergency repairs
 
 %h2
-  The problem you're having may need immediate attention
+  The problem you're having might need immediate attention
 
 %p
-  We ask that you report Emergency and Immediate repair problems through our Repairs Contact Centre.
+  We ask that you report emergency and immediate repair problems through our Repairs Contact Centre.
   This will allow us to review your repair straight away and schedule a suitable appointment to help resolve the issue quickly.
 
 = render partial: 'pages/emergency_telephone_numbers'
