--- a/app/views/pages/heating_repairs.html.haml
+++ b/app/views/pages/heating_repairs.html.haml
@@ -9,12 +9,11 @@
 %iframe{ width: '560', height: '315', src: 'https://www.youtube.com/embed/ktklk7d0ibY?rel=0&amp;showinfo=0', frameborder: '0', allowfullscreen: true }
 
 %p
-  If your heating still isn't working, please call our repairs contact
-  centre so that we can help resolve this and schedule a
-  suitable appointment.
+  If your heating still isn't working, call our repairs contact
+  centre to schedule an appointment.
 
 %p
-  Please call the repairs contact centre on
+  Repairs Contact Centre:
   %strong= repairs_contact_centre_telephone_number
-  Monday to Friday 8am to 7pm and
-  Saturday 9am to 1pm.
+  Monday to Friday 8am to midnight
+  and Saturday 9am to 1pm.
