--- a/app/views/pages/smoke_detector.html.haml
+++ b/app/views/pages/smoke_detector.html.haml
@@ -4,9 +4,9 @@
   Smoke detector beeping
 
 %p
-  If your smoke detector or fire alarm is beeping please call the
-  repairs contact centre. This will allow us to review the problem
-  as a priority and schedule a suitable appointment to help
-  resolve the issue quickly.
+  If your smoke detector or fire alarm is beeping please call
+  the Repairs Contact Centre. This will allow us to review
+  the problem as a priority and schedule a suitable
+  appointment to help resolve the issue quickly.
 
-= render partial: 'emergency_telephone_numbers'
+= render partial: 'pages/emergency_telephone_numbers'
