--- a/app/views/describe_repair/_anything_else.html.haml
+++ b/app/views/describe_repair/_anything_else.html.haml
@@ -1,5 +1,5 @@
 %h1
-  Please let us know any additional details you think might help us
+  Let us know any additional details you think might help us
 
 
 %p
