--- a/app/views/describe_repair/_communal_blocked_drain.html.haml
+++ b/app/views/describe_repair/_communal_blocked_drain.html.haml
@@ -1,14 +1,14 @@
 %h1
-  Please let us know any additional details you think might help us
+  Let us know any additional details you think might help us
 
 %p
   Please describe:
 
 %ul
   %li
-    the type of problem with the drain or gully
+    the problem with the drain or gully
   %li
-    whether there is any obvious damage
+    whether there's any obvious damage to the drain or gully
   %li
-    the location of the problem (nearest property or floor number)
+    where the problem is (the nearest property or the floor number)
 
