--- a/app/views/describe_repair/_communal_describe_repair.html.haml
+++ b/app/views/describe_repair/_communal_describe_repair.html.haml
@@ -1,5 +1,5 @@
 %h1
-  Please let us know any additional details you think might help us
+  Let us know any additional details you think might help us
 
 %p
   Please describe:
@@ -10,5 +10,4 @@
   %li
     how the problem is affecting residents
   %li
-    where the problem is located (the nearest property or floor number)
-
+    where the problem is (the nearest property or the floor number)
