--- a/app/views/describe_repair/_communal_lift.html.haml
+++ b/app/views/describe_repair/_communal_lift.html.haml
@@ -1,13 +1,13 @@
 %h1
-  Please let us know any additional details you think might help us
+  Let us know any additional details you think might help us
 
 %p
   Please describe:
 
 %ul
   %li
-    the type of problem with the lift
+    the problem with the lift
   %li
-    whether there is any obvious damage to the lift
+    whether there's any obvious damage to the lift
   %li
-    the location of the faulty lift
+    where the faulty lift is (the nearest property)
