--- a/app/views/describe_repair/_inside_bathroom_basin_leaking.html.haml
+++ b/app/views/describe_repair/_inside_bathroom_basin_leaking.html.haml
@@ -1,12 +1,12 @@
 %h1
-  Please let us know any additional details you think might help us
+  Let us know any additional details you think might help us
 
 %p
   Please describe:
 
 %ul
   %li
-    where the leak appear to be coming from
+    where you think the leak is coming from
   %li
     whether there is any obvious damage to the basin
 
