--- a/app/views/describe_repair/_inside_kitchen_broken_tap.html.haml
+++ b/app/views/describe_repair/_inside_kitchen_broken_tap.html.haml
@@ -1,5 +1,5 @@
 %h1
-  Please let us know any additional details you think might help us
+  Let us know any additional details you think might help us
 
 %p
   Please describe:
@@ -8,5 +8,4 @@
   %li
     how the tap is broken
   %li
-    the type of tap, if you know it - for example, pillar or mixer
-
+    the type of tap, if you know it - for example, pillar tap, mixer tap
