--- a/app/views/describe_repair/_inside_kitchen_extractor_fan.html.haml
+++ b/app/views/describe_repair/_inside_kitchen_extractor_fan.html.haml
@@ -1,12 +1,11 @@
 %h1
-  Please let us know any additional details you think might help us
+  Let us know any additional details you think might help us
 
 %p
   Please describe:
 
 %ul
   %li
-    the type of problem with your extractor fan
+    the problem with your extractor fan
   %li
-    whether there are any obvious signs of damage
-
+    whether there's any obvious damage
