--- a/app/views/describe_repair/_inside_sockets.html.haml
+++ b/app/views/describe_repair/_inside_sockets.html.haml
@@ -1,13 +1,11 @@
 %h1
-  Please let us know any additional details you think might help us
+  Let us know any additional details you think might help us
 
 %p
   Please describe:
 
 %ul
   %li
-    the type of problem with the socket
+    the problem with the socket
   %li
-    whether it is a single or double socket
-
-
+    whether it's a single or double socket
