--- a/app/views/describe_repair/_inside_window_damage.html.haml
+++ b/app/views/describe_repair/_inside_window_damage.html.haml
@@ -1,15 +1,14 @@
 %h1
-  Please let us know any additional details you think might help us
+  Let us know any additional details you think might help us
 
 %p
   Please describe:
 
 %ul
   %li
-    how is the glass damaged
+    how the glass is damaged
   %li
     how the damage occurred
   %li
-    whether you have a crime reference number (if the
-    window has been vandalised)
-
+    whether you have a crime reference number from the police
+    (if the window has been vandalised)
