--- a/app/views/describe_repair/_outside_guttering.html.haml
+++ b/app/views/describe_repair/_outside_guttering.html.haml
@@ -1,19 +1,15 @@
 %h1
-  Please let us know any additional details you think might help us
+  Let us know any additional details you think might help us
 
 %p
   Please describe:
 
 %ul
   %li
-    the type of problem with the guttering or downpipe
+    the problem with the guttering or downpipe
   %li
-    whether there is any obvious damage
+    whether there's any obvious damage
   %li
-    the material it's made from (for example: cast iron, plastic)
+    the material it's made from - for example, cast iron, plastic
   %li
-    the location of the problem, such as nearest property or floor number
-
-
-
-
+    where the problem is (the nearest property or floor number)
