--- a/app/views/describe_repair/_outside_paving.html.haml
+++ b/app/views/describe_repair/_outside_paving.html.haml
@@ -1,15 +1,13 @@
 %h1
-  Please let us know any additional details you think might help us
+  Let us know any additional details you think might help us
 
 %p
   Please describe:
 
 %ul
   %li
-    the type of problem with the paving
+    the problem with the paving
   %li
-    whether there is any obvious damage
+    whether there's any obvious damage
   %li
     the location of the problem, such as the courtyard or garden
-
-
