(chore) Outside 'describe repair' text shouldn't mirror question
Previously, if you answered "What is the problem outside your home?"
with "something else", the next page would show the same answers a
second time, only as bullet points on the free-text description page.

I've therefore amended the description page text to be similar to the
`_communal_describe_repair` one - albeit with a tweak to the request
for the location - as it'll be on the resident's property, rather than
elsewhere on the estate.

--- a/app/views/describe_repair/_outside_describe_repair.html.haml
+++ b/app/views/describe_repair/_outside_describe_repair.html.haml
@@ -1,18 +1,13 @@
 %h1
-  What is the problem outside your home?
+  Let us know any additional details you think might help us
+
+%p
+  Please describe:
 
 %ul
   %li
-    the guttering or downpipe is blocked or damaged
+    the type of repair problem
   %li
-    a drain is blocked
+    how the problem is affecting residents
   %li
-    paving is broken or coming loose
-  %li
-    the roof is leaking - containable
-  %li
-    a light is not working
-  %li
-    I have pest or rodents in or near my home
-  %li
-    something else
+    where the problem is
