--- a/app/views/confirmations/_callback.html.haml
+++ b/app/views/confirmations/_callback.html.haml
@@ -10,4 +10,5 @@
   and quote your reference number
   = succeed "." do
     %strong= callback.request_reference
-  We are open Monday to Friday 8am to 7pm and Saturdays 9am to 1pm.
+  We are open Monday to Friday 8am to midnight
+  and Saturday, 9am to 1pm.
