(chore) Capitalise "Repairs Contact Centre" throughout

--- a/app/views/pages/address_isnt_here.html.haml
+++ b/app/views/pages/address_isnt_here.html.haml
@@ -7,7 +7,7 @@
   This might be because your home is not managed by Hackney Council.
 
 %p
-  If you're one of our tenants, please call the repairs contact
-  centre on
+  If you're one of our tenants, please call the
+  Repairs Contact Centre on
   = repairs_contact_centre_telephone_number
   so we can help you with your problem.
