--- a/app/views/pages/check_fusebox.html.haml
+++ b/app/views/pages/check_fusebox.html.haml
@@ -21,7 +21,7 @@
 %p
   The fuse box is usually near your electric meter or in
   the hallway. If you need help finding your fuse box,
-  please call the repairs contact centre on
+  please call the Repairs Contact Centre on
   = succeed '.' do
     = repairs_contact_centre_telephone_number
 
@@ -37,7 +37,7 @@
 %p
   If you are uncertain or have any immediate concerns about
   an electrical repair issue in your home, please call our
-  repairs contact centre for guidance on
+  Repairs Contact Centre for guidance on
   = succeed '.' do
     = repairs_contact_centre_telephone_number
 
