--- a/app/views/pages/electrical_hazard_warning.html.haml
+++ b/app/views/pages/electrical_hazard_warning.html.haml
@@ -12,7 +12,7 @@
 %p
   If you're uncertain or have any immediate concerns about
   an electrical repair issue in your home, please call our
-  repairs contact centre for guidance on
+  Repairs Contact Centre for guidance on
   = succeed '.' do
     = repairs_contact_centre_telephone_number
 
