--- a/app/views/pages/heating_repairs.html.haml
+++ b/app/views/pages/heating_repairs.html.haml
@@ -9,8 +9,8 @@
 %iframe{ width: '560', height: '315', src: 'https://www.youtube.com/embed/ktklk7d0ibY?rel=0&amp;showinfo=0', frameborder: '0', allowfullscreen: true }
 
 %p
-  If your heating still isn't working, call our repairs contact
-  centre to schedule an appointment.
+  If your heating still isn't working, call our
+  Repairs Contact Centre to schedule an appointment.
 
 %p
   Repairs Contact Centre:
