(feature) Standardise opening hours throughout
I've moved the text into the locales file, and referenced this
everywhere the opening hours were being displayed.

--- a/app/views/confirmations/_callback.html.haml
+++ b/app/views/confirmations/_callback.html.haml
@@ -10,5 +10,6 @@
   and quote your reference number
   = succeed "." do
     %strong= callback.request_reference
-  We are open Monday to Friday 8am to midnight
-  and Saturday, 9am to 1pm.
+  We're open
+  = succeed '.' do
+    = t('rcc_opening_hours')
