--- a/app/views/pages/_emergency_telephone_numbers.html.haml
+++ b/app/views/pages/_emergency_telephone_numbers.html.haml
@@ -3,7 +3,8 @@
     Call us on:
     = succeed ',' do
       = repairs_contact_centre_telephone_number
-    Monday to Friday, 8am to 7pm and Saturday, 9am to 1pm
+    = succeed '.' do
+      = t('rcc_opening_hours')
 
 %p
   Outside these hours, we provide a
