--- a/app/views/pages/heating_repairs.html.haml
+++ b/app/views/pages/heating_repairs.html.haml
@@ -15,5 +15,5 @@
 %p
   Repairs Contact Centre:
   %strong= repairs_contact_centre_telephone_number
-  Monday to Friday 8am to midnight
-  and Saturday 9am to 1pm.
+  = succeed '.' do
+    = t('rcc_opening_hours')
