--- a/app/views/pages/home_adaptations.html.haml
+++ b/app/views/pages/home_adaptations.html.haml
@@ -11,6 +11,6 @@
 %p
   Repairs Contact Centre:
   %strong= repairs_contact_centre_telephone_number
-  Monday to Friday 8am to 7pm and
-  Saturday 9am to 1pm.
+  = succeed '.' do
+    = t('rcc_opening_hours')
 
