--- a/app/views/pages/start.html.haml
+++ b/app/views/pages/start.html.haml
@@ -40,12 +40,9 @@
     = repairs_contact_centre_telephone_number
 
 %p
-  They are open
-  %strong
-    Monday to Friday 8am to 7pm
-  and
-  %strong
-    Saturday 9am to 1pm
+  We're open
+  = succeed '.' do
+    = t('rcc_opening_hours')
 
 %h2
   Home improvements
