--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,7 @@
 
     %meta{ name: 'viewport', content: 'width=device-width, initial-scale=1' }/
     %meta{ 'http-equiv': 'x-ua-compatible', content: 'ie-edge' }/
+    %meta{ name: 'format-detection', content: 'telephone=no' }/
 
     = csrf_meta_tags
     %link{ href: 'https://fonts.googleapis.com/css?family=Droid+Sans:400,700', rel: 'stylesheet' }/
