(feature) Users should call RCC if they cannot make any appointment slot
If the user is unable to make any of the available appointment slots,
prompt them to call the Repairs Contact Centre, quoting the reference
(work order reference number).

--- a/app/views/appointments/show.html.haml
+++ b/app/views/appointments/show.html.haml
@@ -12,4 +12,12 @@
         as: :radio_buttons,
         label: false
 
+      %p
+        If you can't make any of these appointments, please call
+        the Repairs Contact Centre on
+        = repairs_contact_centre_telephone_number
+        and quote reference number
+        = succeed '.' do
+          = @work_order_reference
+
       = f.button :submit, class: 'button'
