(feature) Make site work in IE8
Serve an IE8-specific version of the stylesheet via a conditional
comment, and prevent the standard one being served to IE.

Also, add the 'html5shiv.js' library which allows IE8 to recognise (and
therefore apply styling to) the elements which were added in HTML5
(header, footer, main, etc).

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,11 +11,22 @@
 
     = csrf_meta_tags
     %link{ href: 'https://fonts.googleapis.com/css?family=Droid+Sans:400,700', rel: 'stylesheet' }/
-    = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
 
     = render partial: 'analytics/google'
     = render partial: 'analytics/hotjar'
+
+    /[if lt IE 9]
+      = javascript_include_tag 'html5shiv'
+      = stylesheet_link_tag 'application-ie8', media: 'all'
+    /[if gt IE 8]
+      = stylesheet_link_tag 'application', media: 'all'
+
+    :plain
+      <!--[if !IE]><!-->
+    = stylesheet_link_tag 'application', media: 'all'
+    :plain
+      <!-- <![endif]-->
 
   %body
     %header
