(chore) Add polyfill to add IE8 support for 'background-size'
Without this, the Hackney logo bigger than its bounding box and gets
cropped.

--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -12,6 +12,7 @@ header {
   h1 {
     background: asset-url('logo.png') 0 0 no-repeat;
     background-size: contain;
+    -ms-behavior: url(/backgroundsize.htc);
     display: inline-block;
     height: 62px;
     overflow: hidden;
