(chore) Various tweaks based on Jason's feedback
  - Rename 'basin' to 'basin / sink' for consistency
  - Append 'to the light fitting' on the relevant describe repair page
  - Remove emergency contact details from the smoke detector page
  - Make 'toilet unblock' page consistent
  - Add 'I have no heating' answer which links to 'heating_repairs' page

--- a/app/views/describe_repair/_inside_light_fitting.html.haml
+++ b/app/views/describe_repair/_inside_light_fitting.html.haml
@@ -8,4 +8,4 @@
   %li
     the problem with the light fitting
   %li
-    whether there's any obvious damage
+    whether there's any obvious damage to the light fitting
