(feature) Use legacy YouTube embed code
The video sharing code you get from youtube.com only supports new
browsers, as they no longer support Flash video embeds.

However, using the old embed code still works in modern browsers, but
additionally provides a fallback for IE8 and older - which shows the
video thumbnail with a button that links to the YouTube video on their
site directly.

--- a/app/views/pages/damp_and_mould.html.haml
+++ b/app/views/pages/damp_and_mould.html.haml
@@ -10,7 +10,11 @@
   Watch this short video for some advice on dealing
   with damp and mould problem areas in your home.
 
-%iframe{ width: '560', height: '315', src: 'https://www.youtube.com/embed/7nq71pGBGI8?rel=0&amp;showinfo=0', frameborder: '0', allowfullscreen: true }
+%object{ height: '315', width: '560' }
+  %param{ name: 'movie', value: 'http://www.youtube.com/v/7nq71pGBGI8?version=3&hl=en_US' }/
+  %param{ name: 'allowFullScreen', value: 'true' }/
+  %param{ name: 'allowscriptaccess', value: 'always' }/
+  %embed{ allowfullscreen: 'true', allowscriptaccess: 'always', height: '315', src: 'http://www.youtube.com/v/7nq71pGBGI8?version=3&hl=en_US', type: 'application/x-shockwave-flash', width: '560' }
 
 %p
   Select continue if you'd still like to report this repair.
