--- a/app/views/pages/heating_repairs.html.haml
+++ b/app/views/pages/heating_repairs.html.haml
@@ -6,7 +6,11 @@
 %h2
   Watch this short video to find out how to fix common heating problems.
 
-%iframe{ width: '560', height: '315', src: 'https://www.youtube.com/embed/ktklk7d0ibY?rel=0&amp;showinfo=0', frameborder: '0', allowfullscreen: true }
+%object{ height: '315', width: '560' }
+  %param{ name: 'movie', value: 'http://www.youtube.com/v/ktklk7d0ibY?version=3&hl=en_US' }/
+  %param{ name: 'allowFullScreen', value: 'true' }/
+  %param{ name: 'allowscriptaccess', value: 'always' }/
+  %embed{ allowfullscreen: 'true', allowscriptaccess: 'always', height: '315', src: 'http://www.youtube.com/v/ktklk7d0ibY?version=3&hl=en_US', type: 'application/x-shockwave-flash', width: '560' }
 
 %p
   If your heating still isn't working, call our
