--- a/app/views/pages/unblock_sink.html.haml
+++ b/app/views/pages/unblock_sink.html.haml
@@ -6,7 +6,11 @@
 %p
   Watch this short video for advice on how to unblock a sink in your home.
 
-%iframe{ width: '560', height: '315', src: 'https://www.youtube.com/embed/WTJQi7iBgiA?rel=0&amp;showinfo=0', frameborder: '0', allowfullscreen: true }
+%object{ height: '315', width: '560' }
+  %param{ name: 'movie', value: 'http://www.youtube.com/v/WTJQi7iBgiA?version=3&hl=en_US' }/
+  %param{ name: 'allowFullScreen', value: 'true' }/
+  %param{ name: 'allowscriptaccess', value: 'always' }/
+  %embed{ allowfullscreen: 'true', allowscriptaccess: 'always', height: '315', src: 'http://www.youtube.com/v/WTJQi7iBgiA?version=3&hl=en_US', type: 'application/x-shockwave-flash', width: '560' }
 
 %p
   If your sink is still blocked, please
