--- a/app/views/pages/damp_and_mould.html.haml
+++ b/app/views/pages/damp_and_mould.html.haml
@@ -11,10 +11,10 @@
   with damp and mould problem areas in your home.
 
 %object{ height: '315', width: '560' }
-  %param{ name: 'movie', value: 'http://www.youtube.com/v/7nq71pGBGI8?version=3&hl=en_US' }/
+  %param{ name: 'movie', value: 'https://www.youtube.com/v/7nq71pGBGI8?version=3&hl=en_US' }/
   %param{ name: 'allowFullScreen', value: 'true' }/
   %param{ name: 'allowscriptaccess', value: 'always' }/
-  %embed{ allowfullscreen: 'true', allowscriptaccess: 'always', height: '315', src: 'http://www.youtube.com/v/7nq71pGBGI8?version=3&hl=en_US', type: 'application/x-shockwave-flash', width: '560' }
+  %embed{ allowfullscreen: 'true', allowscriptaccess: 'always', height: '315', src: 'https://www.youtube.com/v/7nq71pGBGI8?version=3&hl=en_US', type: 'application/x-shockwave-flash', width: '560' }
 
 %p
   Select continue if you'd still like to report this repair.
