--- a/app/views/pages/replace_lightbulb.html.haml
+++ b/app/views/pages/replace_lightbulb.html.haml
@@ -7,10 +7,10 @@
   Watch this short video for advice on how to replace a light bulb or a lamp in your home.
 
 %object{ height: '315', width: '560' }
-  %param{ name: 'movie', value: 'http://www.youtube.com/v/NZN2AZAMPHY?version=3&hl=en_US' }/
+  %param{ name: 'movie', value: 'https://www.youtube.com/v/NZN2AZAMPHY?version=3&hl=en_US' }/
   %param{ name: 'allowFullScreen', value: 'true' }/
   %param{ name: 'allowscriptaccess', value: 'always' }/
-  %embed{ allowfullscreen: 'true', allowscriptaccess: 'always', height: '315', src: 'http://www.youtube.com/v/NZN2AZAMPHY?version=3&hl=en_US', type: 'application/x-shockwave-flash', width: '560' }
+  %embed{ allowfullscreen: 'true', allowscriptaccess: 'always', height: '315', src: 'https://www.youtube.com/v/NZN2AZAMPHY?version=3&hl=en_US', type: 'application/x-shockwave-flash', width: '560' }
 
 %p
   If you've replaced the bulb and the light still isn't working, please select continue to book an appointment.
