(feature) Leaseholders cannot report repairs
The API 'get property' endpoint will shortly return a new `maintainable`
boolean.

When this is `false`, it is likely the property belongs to a leaseholder
or is a non-Hackney Council managed address.

In this case, redirect the user to a page telling them to call
the Repairs Contact Centre for further assistance.

--- a/app/views/pages/cannot_report_repair.html.haml
+++ b/app/views/pages/cannot_report_repair.html.haml
@@ -1,7 +1,7 @@
 = back_link
 
 %h1
-  We can't find your address
+  We can't report a repair for your address
 
 %p
   This might be because your home is not managed by Hackney Council.
