(chore) Substitute "Repairs Contact Centre" for "us"

--- a/app/views/appointments/show.html.haml
+++ b/app/views/appointments/show.html.haml
@@ -13,8 +13,7 @@
         label: false
 
       %p
-        If you can't make any of these appointments, please call
-        the Repairs Contact Centre on
+        If you can't make any of these appointments, please call us on
         = repairs_contact_centre_telephone_number
         and quote reference number
         = succeed '.' do
