--- a/app/views/errors/_contact_phone_numbers.html.haml
+++ b/app/views/errors/_contact_phone_numbers.html.haml
@@ -1,6 +1,6 @@
 %p
   %strong
-    Please phone our repairs contact centre on
+    Please phone us on
     = succeed '.' do
       = repairs_contact_centre_telephone_number
     We’re open Monday to Friday from 8am to midnight and on Saturday
