--- a/app/views/pages/check_fusebox.html.haml
+++ b/app/views/pages/check_fusebox.html.haml
@@ -21,7 +21,7 @@
 %p
   The fuse box is usually near your electric meter or in
   the hallway. If you need help finding your fuse box,
-  please call the Repairs Contact Centre on
+  please call us on
   = succeed '.' do
     = repairs_contact_centre_telephone_number
 
@@ -36,8 +36,8 @@
 
 %p
   If you are uncertain or have any immediate concerns about
-  an electrical repair issue in your home, please call our
-  Repairs Contact Centre for guidance on
+  an electrical repair issue in your home, please call us
+  for guidance on
   = succeed '.' do
     = repairs_contact_centre_telephone_number
 
