--- a/app/views/pages/electrical_hazard_warning.html.haml
+++ b/app/views/pages/electrical_hazard_warning.html.haml
@@ -11,8 +11,8 @@
 
 %p
   If you're uncertain or have any immediate concerns about
-  an electrical repair issue in your home, please call our
-  Repairs Contact Centre for guidance on
+  an electrical repair issue in your home, please call us
+  for guidance on
   = succeed '.' do
     = repairs_contact_centre_telephone_number
 
