--- a/app/views/pages/home_adaptations.html.haml
+++ b/app/views/pages/home_adaptations.html.haml
@@ -5,7 +5,7 @@
 
 %p
   If your home has been altered or adapted due to a disability,
-  please call our Repairs Contact Centre so we can review your
+  please call us so we can review your
   repair immediately and schedule an appointment.
 
 %p
