--- a/app/views/pages/smoke_detector.html.haml
+++ b/app/views/pages/smoke_detector.html.haml
@@ -5,7 +5,7 @@
 
 %p
   If your smoke detector or fire alarm is beeping please call
-  the Repairs Contact Centre. This will allow us to review
+  us. This will allow us to review
   the problem as a priority and schedule a suitable
   appointment to help resolve the issue quickly.
 
