--- a/app/views/pages/start.html.haml
+++ b/app/views/pages/start.html.haml
@@ -34,8 +34,7 @@
   Emergency and urgent repairs
 
 %p
-  If your repair is an emergency, please call the
-  Repairs Contact Centre on
+  If your repair is an emergency, please call us on
   = succeed '.' do
     = repairs_contact_centre_telephone_number
 
