--- a/app/views/pages/heating_repairs.html.haml
+++ b/app/views/pages/heating_repairs.html.haml
@@ -13,8 +13,7 @@
   %embed{ allowfullscreen: 'true', allowscriptaccess: 'always', height: '315', src: 'https://www.youtube.com/v/ktklk7d0ibY?version=3&hl=en_US', type: 'application/x-shockwave-flash', width: '560' }
 
 %p
-  If your heating still isn't working, call our
-  Repairs Contact Centre to schedule an appointment.
+  If your heating still isn't working, call us to schedule an appointment.
 
 %p
   Repairs Contact Centre:
