(fix) YouTube embeds don't overflow screen on mobile
Whilst doing browser testing, we discovered that the changes made to
support the YouTube video embed in IE8 caused them to overflow the edge
of the page on mobile.

Now videos are displayed at the recommended size of 560px wide on
desktop, but restricted to 100% width (if this is less than 560px) on
mobile.

--- a/app/assets/stylesheets/components/main.scss
+++ b/app/assets/stylesheets/components/main.scss
@@ -59,6 +59,12 @@ main {
     padding-bottom: 2em;
   }
 
+  object, embed {
+    height: 315px;
+    max-width: 95%;
+    width: 560px;
+  }
+
   abbr[title] {
     cursor: help;
     text-decoration: underline dotted;
