--- a/app/views/pages/damp_and_mould.html.haml
+++ b/app/views/pages/damp_and_mould.html.haml
@@ -10,11 +10,11 @@
   Watch this short video for some advice on dealing
   with damp and mould problem areas in your home.
 
-%object{ height: '315', width: '560' }
+%object
   %param{ name: 'movie', value: 'https://www.youtube.com/v/7nq71pGBGI8?version=3&hl=en_US' }/
   %param{ name: 'allowFullScreen', value: 'true' }/
   %param{ name: 'allowscriptaccess', value: 'always' }/
-  %embed{ allowfullscreen: 'true', allowscriptaccess: 'always', height: '315', src: 'https://www.youtube.com/v/7nq71pGBGI8?version=3&hl=en_US', type: 'application/x-shockwave-flash', width: '560' }
+  %embed{ allowfullscreen: 'true', allowscriptaccess: 'always', src: 'https://www.youtube.com/v/7nq71pGBGI8?version=3&hl=en_US', type: 'application/x-shockwave-flash' }
 
 %p
   Select continue if you'd still like to report this repair.
