--- a/app/views/pages/unblock_sink.html.haml
+++ b/app/views/pages/unblock_sink.html.haml
@@ -6,11 +6,11 @@
 %p
   Watch this short video for advice on how to unblock a sink in your home.
 
-%object{ height: '315', width: '560' }
+%object
   %param{ name: 'movie', value: 'https://www.youtube.com/v/WTJQi7iBgiA?version=3&hl=en_US' }/
   %param{ name: 'allowFullScreen', value: 'true' }/
   %param{ name: 'allowscriptaccess', value: 'always' }/
-  %embed{ allowfullscreen: 'true', allowscriptaccess: 'always', height: '315', src: 'https://www.youtube.com/v/WTJQi7iBgiA?version=3&hl=en_US', type: 'application/x-shockwave-flash', width: '560' }
+  %embed{ allowfullscreen: 'true', allowscriptaccess: 'always', src: 'https://www.youtube.com/v/WTJQi7iBgiA?version=3&hl=en_US', type: 'application/x-shockwave-flash' }
 
 %p
   If your sink is still blocked, please
