(chore) Copy changes after feedback from content team
A few tweaks to the content on the site, having sat down with a member
of Hackney's content team.

--- a/app/views/describe_repair/_anything_else.html.haml
+++ b/app/views/describe_repair/_anything_else.html.haml
@@ -1,5 +1,5 @@
 %h1
-  Let us know any additional details you think might help us
+  Let us know any further details you think might help us
 
 
 %p
@@ -9,4 +9,4 @@
   %li
     the type of problem
   %li
-    whether there is any obvious damage to the item
+    whether there is any obvious damage
