--- a/app/views/pages/check_fusebox.html.haml
+++ b/app/views/pages/check_fusebox.html.haml
@@ -6,9 +6,9 @@
 %p
   If your light isn't working and you've already tried changing the
   light bulb, it may be that the lighting trip switch in your fuse
-  box has activated and is in the ‘OFF’ position.
+  box has activated and is in the 'off' position.
   Please check your fuse box and make sure the lighting trip
-  switch is in the 'ON' position.
+  switch is in the 'on' position.
 
 %p
   If it doesn't reset, select continue to book an appointment.
