--- a/app/views/pages/start.html.haml
+++ b/app/views/pages/start.html.haml
@@ -23,7 +23,7 @@
       Important
 
   %strong
-    If you can smell gas, please call National Gas Emergency on:
+    If you can smell gas, please call the gas emergency number on:
     %br/
     = gas_emergency_telephone_number
 
