--- a/app/views/questions/start/index.html.haml
+++ b/app/views/questions/start/index.html.haml
@@ -5,7 +5,7 @@
 
       %p
         %strong
-          Do any of the following apply:
+          Do any of the following apply?
 
     .answers
       = f.input :answer, collection: @form.choices, as: :radio_buttons, label: false
