--- a/app/views/describe_repair/_describe_problem.html.haml
+++ b/app/views/describe_repair/_describe_problem.html.haml
@@ -1,5 +1,5 @@
 %h1
-  Let us know any additional details you think might help us
+  Let us know any further details you think might help us
 
 %p
   Please describe:
@@ -8,4 +8,4 @@
   %li
     the problem
   %li
-    whether there's any obvious damage to the item
+    whether there's any obvious damage
