--- a/app/views/describe_repair/_inside_kitchen_extractor_fan.html.haml
+++ b/app/views/describe_repair/_inside_kitchen_extractor_fan.html.haml
@@ -1,5 +1,5 @@
 %h1
-  Let us know any additional details you think might help us
+  Let us know any further details you think might help us
 
 %p
   Please describe:
