--- a/app/views/pages/_emergency_telephone_numbers.html.haml
+++ b/app/views/pages/_emergency_telephone_numbers.html.haml
@@ -8,8 +8,7 @@
 
 %p
   Outside these hours, we provide a
-  %em
-    make safe
+  'Make safe'
   service, to ensure there's no danger to your
   household or significant damage to your property.
   Please call
@@ -20,17 +19,13 @@
   If your emergency relates to gas, electricity or water
   supply, you should phone:
 
-%p
-  %strong
-    For electricity:
-  = electricity_emergency_telephone_number
-
-%p
-  %strong
-    For water:
-  = water_emergency_telephone_number
-
-%p
-  %strong
-    For gas:
-  = gas_emergency_telephone_number
+%ul
+  %li
+    gas:
+    = gas_emergency_telephone_number
+  %li
+    electricity:
+    = electricity_emergency_telephone_number
+  %li
+    water:
+    = water_emergency_telephone_number
