(feature) Footer matches main Hackney site

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,5 +1,5 @@
 $hackney-green: #00634a;
-$hackney-border-green: #17b15a;
+$hackney-mid-green: #17b15a;
 $hackney-light-green: #74c043;
 $hackney-grey: #d7d7d7;
 $hackney-dark-grey: #252525;
