--- a/app/assets/stylesheets/components/footer.scss
+++ b/app/assets/stylesheets/components/footer.scss
@@ -1,13 +1,13 @@
 footer {
   background-color: $hackney-dark-grey;
-  border-top: 5px solid $hackney-green;
+  border-top: 5px solid $hackney-light-green;
   color: $white;
   font-size: 14px;
   padding: 2em;
   position: relative;
 
-  &::before, &::after {
-    background-color: $hackney-light-green;
+  &::before {
+    background-color: #9bcf7f;
     content: '';
     display: block;
     height: 3px;
@@ -15,6 +15,17 @@ footer {
     position: absolute;
     right: 0;
     top: 5px;
+  }
+
+  &::after {
+    background-color: $hackney-mid-green;
+    content: '';
+    height: 6px;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: -16px;
+    z-index: 999;
   }
 
   a {
