(chore) Update emergency contact information
 - Use the names of the utility companies rather than generic names
   (e.g. 'Thames Water' rather than 'water')
 - Remove the opening hours from the emergency repair page. Residents
   can call any time, which meant the copy was confusing.

--- a/app/views/errors/_contact_phone_numbers.html.haml
+++ b/app/views/errors/_contact_phone_numbers.html.haml
@@ -28,11 +28,11 @@
 
 %ul
   %li
-    gas:
+    National Grid (Gas):
     = gas_emergency_telephone_number
   %li
-    electricity:
+    UK Power Networks:
     = electricity_emergency_telephone_number
   %li
-    water:
+    Thames Water:
     = water_emergency_telephone_number
