--- a/app/views/pages/_emergency_telephone_numbers.html.haml
+++ b/app/views/pages/_emergency_telephone_numbers.html.haml
@@ -3,29 +3,17 @@
     Call us on:
     = succeed ',' do
       = repairs_contact_centre_telephone_number
-    = succeed '.' do
-      = t('rcc_opening_hours')
-
 %p
-  Outside these hours, we provide a
-  'Make safe'
-  service, to ensure there's no danger to your
-  household or significant damage to your property.
-  Please call
-  %strong
-    = repairs_emergency_telephone_number
-
-%p
-  If your emergency relates to gas, electricity or water
+  However, if your emergency relates to gas, electricity or water
   supply, you should phone:
 
 %ul
   %li
-    gas:
+    National Grid (Gas):
     = gas_emergency_telephone_number
   %li
-    electricity:
+    UK Power Networks:
     = electricity_emergency_telephone_number
   %li
-    water:
+    Thames Water:
     = water_emergency_telephone_number
