(feature) Add BETA banner to the top of all pages
This follows the pattern used by GOV.UK, and includes a link to a static
page which explains to users what a 'beta' service is.

I've taken the copy directly from the GOV.UK guidance, with some minor
renames.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -41,6 +41,14 @@
       #content{ role: 'main' }
         - flash.each do |key, value|
           = content_tag :div, value, class: "flash flash-#{key}"
+
+        .beta-banner
+          %p
+            %small Beta
+            This is a new service -
+            %a{ href: '/pages/beta' }
+              find out what this means
+
         = yield
 
     %footer
