--- a/app/assets/stylesheets/components/main.scss
+++ b/app/assets/stylesheets/components/main.scss
@@ -82,4 +82,17 @@ main {
     margin-top: 0;
     margin-bottom: $gutter;
   }
+
+  .beta-banner {
+    font-size: 80%;
+
+    small {
+      background-color: $hackney-green;
+      color: $white;
+      padding: 2px 4px;
+      margin-right: 4px;
+      text-transform: uppercase;
+      font-weight: bold;
+    }
+  }
 }
