(fix) Hide the 'beta' banner when the site is disabled
Disabling the site replaces all pages with a warning that the service
is unavailable. Unfortunately, the beta banner's link would be broken in
this case.

I've therefore removed the beta banner from all pages when the service
is disabled.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -42,12 +42,13 @@
         - flash.each do |key, value|
           = content_tag :div, value, class: "flash flash-#{key}"
 
-        .beta-banner
-          %p
-            %small Beta
-            This is a new service -
-            %a{ href: '/pages/beta' }
-              find out what this means
+        - unless App.flipper.enabled?(:service_disabled)
+          .beta-banner
+            %p
+              %small Beta
+              This is a new service -
+              %a{ href: '/pages/beta' }
+                find out what this means
 
         = yield
 
