Pull opening hours from i18n file on error pages
This is the only place in the application that's still got hardcoded
values rather than using the i18n value. Updating it should prevent this
getting missed if and when the opening hours need to be updated.

--- a/app/views/errors/_contact_phone_numbers.html.haml
+++ b/app/views/errors/_contact_phone_numbers.html.haml
@@ -3,8 +3,9 @@
     Please phone us on
     = succeed '.' do
       = repairs_contact_centre_telephone_number
-    We’re open Monday to Friday from 8am to midnight and on Saturday
-    from 9am to 1pm.
+    We’re open
+    = succeed '.' do
+      = t('rcc_opening_hours')
     You can phone us outside these hours if you need an emergency repair.
 
 %p
