Remove callback "within one working day" promise
Remove the timeframe promised for the callback after discussion with the
RCC. We can revisit the promised timeframe in the future once we
understand the impact of the service.

--- a/app/views/confirmations/_callback.html.haml
+++ b/app/views/confirmations/_callback.html.haml
@@ -1,5 +1,5 @@
 %p
-  We will call you within one working day, between
+  We will call you between
   %strong= callback.time
   to arrange a repair appointment.
 
