--- a/app/views/contact_details_with_callback/index.html.haml
+++ b/app/views/contact_details_with_callback/index.html.haml
@@ -5,7 +5,7 @@
     %legend.question
       %h1= t('contact-details.title')
 
-      %p We will contact you within one working day to book an appointment for your repair.
+      %p We will contact you to book an appointment for your repair.
 
     .answers
       = f.input :full_name
