Report another repair
Add new link at end of process to restart process, but retain address and contact
details.
If address is present, then new address confirmation page
New method for removing address information if user wants to change
If contact details present, then prefill form with them

--- a/app/views/confirmations/show.html.haml
+++ b/app/views/confirmations/show.html.haml
@@ -14,6 +14,7 @@
 
     = render @confirmation.scheduled_action
 
+  = link_to "Report another repair", questions_start_path(keep_address: true)
 .grid-row
   %section#summary.column-two-thirds
     %h3 Your details
