--- a/app/assets/stylesheets/hackney.scss
+++ b/app/assets/stylesheets/hackney.scss
@@ -50,3 +50,11 @@ body {
 .wrapper {
   @extend %site-width-container;
 }
+
+input.link {
+  background: none;
+  border: 0;
+  padding: 0;
+  margin: 0;
+  display: inline;
+}
