--- a/app/views/questions/screening_filter/index.html.haml
+++ b/app/views/questions/screening_filter/index.html.haml
@@ -1,11 +1,9 @@
+= back_link
+
 = simple_form_for @form, url: request.fullpath do |f|
   %fieldset
     %legend.question
-      %h1 Before you continue
-
-      %p
-        %strong
-          Do any of the following apply?
+      %h1 Is your repair one of these?
 
     .answers
       = f.input :answer, collection: @form.choices, as: :radio_buttons, label: false
