Allow Question to specify both a description detail *and* a next page
For some questions we inconsistently show either a warning page or a description details partial, as the functionality to display both did not exist.

This adds the functionality to specify both a page and a desc on a question and display both.

Apply this to Light Switches and Sockets.
(also add SOR code to Kitchen > Light Switch journey)

--- a/app/views/pages/electrical_hazard_warning.html.haml
+++ b/app/views/pages/electrical_hazard_warning.html.haml
@@ -20,4 +20,4 @@
   If you'd like to book an appointment for your electrical
   repair, please select continue.
 
-%p= link_to 'Continue', describe_repair_path, class: 'button'
+%p= link_to 'Continue', describe_repair_path(details: params[:details]), class: 'button'
