Tweaks based on User Research
- default checked radio for none of the above on emergency and filter
- add "at all" to the end of heating, water and electricity
- consistent ordering and capitilisation of room question answers
- add windows to bathroom

--- a/app/views/questions/screening_filter/index.html.haml
+++ b/app/views/questions/screening_filter/index.html.haml
@@ -6,5 +6,5 @@
       %h1 Is your repair one of these?
 
     .answers
-      = f.input :answer, collection: @form.choices, as: :radio_buttons, label: false
+      = f.input :answer, collection: @form.choices, checked: :none_of_the_above, as: :radio_buttons, label: false
       = f.button :submit, class: 'button'
